Updated stuff as specified in email

--- a/SOA/Runtime/SOA-Registry/config/soa.msgListener.properties
+++ b/SOA/Runtime/SOA-Registry/config/soa.msgListener.properties
@@ -75,6 +75,6 @@ SOAListenerLogRollover=YES
 #
 # ------- MANDATORY CONNECTIONS ---------
 SOAListenerJDBCDriver=com.microsoft.sqlserver.jdbc.SQLServerDriver
-SOAListenerDBaseURL=jdbc:sqlserver://<machineName>\\SQLExpress:1433;SelectMethod=Cursor;DatabaseName=SOARegistry
+SOAListenerDBaseURL=jdbc:sqlserver://<machineName>:1433;SelectMethod=Cursor;DatabaseName=SOARegistry
 SOAListenerDBaseUser=soaRegister
 SOAListenerDBasePasswd=s0@R3g15t3R
