--- a/SOA/Runtime/SOA-Registry/config/soa.msgListener.properties
+++ b/SOA/Runtime/SOA-Registry/config/soa.msgListener.properties
@@ -48,16 +48,16 @@ NameOfSOASystem=Thortons-SOA
 
 ## Where the HL7 Messages get written to 
 ##
-SOAListenerGoodOutputDir=C:\\SOA\\Runtime\\SOA-Registry\\Incoming\\Good
-SOAListenerBadOutputDir=C:\\SOA\\Runtime\\SOA-Registry\\Incoming\\Bad
-SOAListenerTemporaryDir=C:\\SOA\\Runtime\\SOA-Registry\\Incoming
+SOAListenerGoodOutputDir=..\\Good
+SOAListenerBadOutputDir=..\\Bad
+SOAListenerTemporaryDir=..\\Incoming
 
 ## HL7 Listener Processing Log File
 ##
 ##  Allowable Log Levels :  INFO   (summary information) or 
 ##                          DEBUG  (detailed information)
 ##
-SOAListenerLogDir=C:\\SOA\\Runtime\\SOA-Registry\\logs
+SOAListenerLogDir=..\\logs
 SOAListenerLogLevel=DEBUG
 SOAListenerLogRollover=YES
 
@@ -75,6 +75,6 @@ SOAListenerLogRollover=YES
 #
 # ------- MANDATORY CONNECTIONS ---------
 SOAListenerJDBCDriver=com.microsoft.sqlserver.jdbc.SQLServerDriver
-SOAListenerDBaseURL=jdbc:sqlserver://<machineName>:1433;SelectMethod=Cursor;DatabaseName=SOARegistry
-SOAListenerDBaseUser=soaRegister
-SOAListenerDBasePasswd=s0@R3g15t3R
+SOAListenerDBaseURL=jdbc:sqlserver://localhost:1433;SelectMethod=Cursor;DatabaseName=SOARegistry
+SOAListenerDBaseUser=sa
+SOAListenerDBasePasswd=123456
