Start of the java shit

--- a/SOA/Runtime/SOA-Registry/config/soa.msgListener.properties
+++ b/SOA/Runtime/SOA-Registry/config/soa.msgListener.properties
@@ -1,4 +1,4 @@
-###
+	###
 ### SOA Register Processing Properties
 ###
 ###     version  1.00.00
@@ -34,7 +34,7 @@ TeamTestOwn=YES
 ## "YES" = return error on publish service is given IPAdrress is not reachable
 ## "NO" - log warning only
 ##
-ErrOnUnreachableIP=YES
+ErrOnUnreachableIP=NO
 ErrOnNonActivePublishLocation=NO
 
 ## Message Acknowledgements
@@ -76,5 +76,5 @@ SOAListenerLogRollover=YES
 # ------- MANDATORY CONNECTIONS ---------
 SOAListenerJDBCDriver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 SOAListenerDBaseURL=jdbc:sqlserver://localhost:1433;SelectMethod=Cursor;DatabaseName=SOARegistry
-SOAListenerDBaseUser=sa
-SOAListenerDBasePasswd=123456
+SOAListenerDBaseUser=soaRegister
+SOAListenerDBasePasswd=s0@R3g15t3R
