--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+.idea
+.settings/
+.project
+.classpath
+target/
+*.iml
+dependency-reduced-pom.xml
+log/*
+
 #OS junk files
 [Tt]humbs.db
 *.DS_Store
