added tests and beginnings of Purchase Totaller

--- a/Purchase-Totaller/Purchase-Totaller.csproj
+++ b/Purchase-Totaller/Purchase-Totaller.csproj
@@ -44,6 +44,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="hl7\HlConnection.cs" />
+    <Compile Include="hl7\HlRequest.cs" />
+    <Compile Include="hl7\HlResponse.cs" />
+    <Compile Include="hl7\HlService.cs" />
     <Compile Include="ui\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -73,6 +77,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="logic\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
