Thread to keep service registerd

--- a/SOA/Runtime/SOA-Registry/config/soa.msgListener.properties
+++ b/SOA/Runtime/SOA-Registry/config/soa.msgListener.properties
@@ -26,8 +26,8 @@ TerminateOnNotOk=NO
 ##     "NO" = team only receives information about other team's services
 ##
 CheckTimeoutAfterNumMessages=10
-TeamTimeout=NEVER
-TeamTestOwn=YES
+TeamTimeout=1
+TeamTestOwn=NO
 
 ## IP Validation, Publish Location
 ##
