--- a/Purchase-Totaller/SoaServer/App.config
+++ b/Purchase-Totaller/SoaServer/App.config
@@ -1,6 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <appSettings>
+    <add key="teamName" value="HekarTestService" />
+    <add key="tagName" value="GIORP-TOTAL" />
+    <add key="serviceName" value="PurchaseTotallerHekar" />
+    <add key="registryIp" value="127.0.0.1" />
+    <add key="registryPort" value="3128" />
+    <add key="ip" value="127.0.0.1" />
+    <add key="port" value="5006" />
+  </appSettings>
 </configuration>
