--- a/Hl7Lib/Hl7Lib.csproj
+++ b/Hl7Lib/Hl7Lib.csproj
@@ -43,6 +43,7 @@
     <Compile Include="hl7\Request.cs" />
     <Compile Include="hl7\Response.cs" />
     <Compile Include="hl7\Service.cs" />
+    <Compile Include="Logger\Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
